# text-classifier

./: README.md  pyproject.toml  text_classifier.ipynb
data/.ipynb_checkpoints/: output-checkpoint.txt
