[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["natalie sinner <nataliesinner@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.0"
pandas = "^1.0.5"
matplotlib = "^3.3.0"
sklearn = "^0.0"
tensorflow = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
